Worked on operator to separate monitoring from deploying to avoid parallel deployments of the same resource

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "oisp-beam-rule-engine"]
 	path = oisp-beam-rule-engine
-	url = https://github.com/Open-IoT-Service-Platform/oisp-beam-rule-engine.git
-	branch = develop
+	url = https://github.com/wagmarcel/oisp-beam-rule-engine.git
+	branch = auth-api
